<resources>
    <string name="app_name">UNIAXE</string>
    <string name="admin_login">Admin Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signRegister">Enter</string>
    <string name="enter">Enter</string>
    <string name="login_title">Login!!</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="emailRegister">Email</string>
    <string name="usernameRegister">Username</string>
    <string name="question_bank">Question Bank</string>
    <string name="insert_question">Insert Question</string>
    <string name="view_question">View Question</string>
    <string name="course_name">Course Name</string>
    <string name="year">Year</string>
    <string name="mid">Mid</string>
    <string name="add_question">Add Question</string>
    <string name="update_question">Update Question</string>
    <string name="delete_question">Delete Question</string>
    <string name="question_id">Question ID</string>
    <string name="updated_course_name">Updated Course Name</string>
    <string name="updated_question_id">Updated Question ID</string>
    <string name="upload_question">Upload Question</string>
    <string name="search_question">Search Question</string>
    <string name="pdf_UP">PDF</string>
    <string name="select_pdf">Select PDF</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="batch">Batch</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="submit">Submit</string>
    <string name="calculate_your_cgpa">Calculate Your CGPA</string>
    <string name="calculate_cgpa">Calculate CGPA</string>
    <string name="result_will_appear_here">Result will appear here</string>
    <string name="add_your_note">Add Your Note</string>
    <string name="course_id_n">Course ID</string>
    <string name="note_submission">Note Submission</string>
    <string name="guideline_for_students">Guideline For Students</string>
    <string name="pdf_title">PDF Title</string>
    <string name="no_data_found">No data found</string>
    <string name="course_outline_submission">Course Outline Submission</string>
    <string name="read_course_outline">Read Course Outline</string>
    <string name="edit_item">Edit Item</string>
    <string name="title_g">Title</string>
    <string name="subtitle_g">Subtitle</string>
    <string name="select_pdf_g">Select PDF</string>
    <string name="update_g">Update</string>
    <string name="update_course_outline">Update Course Outline</string>
    <string name="read_course_outline_stu">Read Course Outline Student</string>
    <string name="read_your_guideline">Read Your Guideline</string>
    <string name="course_name_gui">Course Name</string>
    <string name="course_id">Course ID</string>
    <string name="batch_info">Batch Info</string>
    <string name="teacher_login">Teacher Login</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="course_name_n">Course Name</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="todo">TODO</string>
    <string name="create">Create</string>
    <string name="email1">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password2">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="enter_default_admin_password">Enter Default Admin Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_id_number">Enter ID Number</string>
    <string name="enter_admin_name">Enter Admin Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="admin_signup">Admin SignUp</string>
    <string name="insert_pdf">Insert Pdf</string>
    <string name="insert_pdf2">Insert Pdf</string>
    <string name="course_id2">Course Id</string>
    <string name="year2">Year</string>
    <string name="note">Note</string>
    <string name="question">Question</string>
    <string name="finale">Final</string>
    <string name="add">Add</string>
    <string name="course_name4">Course Name</string>
    <string name="final4">Final</string>
    <string name="teacher_name4">Teacher Name</string>
    <string name="admin_icon">Admin Icon</string>
    <string name="admin">Admin</string>
    <string name="student_icon">Student Icon</string>
    <string name="student">Student</string>
    <string name="teacher_icon">Teacher Icon</string>
    <string name="teacher">Teacher</string>
    <string name="sign_in4">Sign In</string>
    <string name="do_not_have_an_account3">Do not have an account?</string>
    <string name="login3">Login</string>
    <string name="id3">ID</string>
    <string name="student_name3">Student name</string>
    <string name="sign_in3">Sign In</string>
    <string name="do_not_have_an_accountw">Do not have an account?</string>
    <string name="loginw">Login</string>
    <string name="student_dashboard3">Student Dashboard</string>
    <string name="create3">Create</string>
    <string name="teacher_dashboard3">Teacher Dashboard</string>
    <string name="edit_pdf3">Edit PDF</string>
    <string name="update_pdf5">Update PDF</string>
    <string name="course_id5">Course ID</string>
    <string name="course_name45">Course Name</string>
    <string name="year5">Year</string>
    <string name="select_pdf5">Select PDF</string>
    <string name="mid5">Mid</string>
    <string name="final5">Final</string>
    <string name="note5">Note</string>
    <string name="question5">Question</string>
    <string name="course_name8">Course Name</string>
    <string name="create9">Create</string>
    <string name="logout9">Logout</string>
    <string name="read9">Read</string>
    <string name="delete8">Delete</string>
    <string name="update8">Update</string>
    <string name="create67">Create</string>
    <string name="read7">Read</string>
    <string name="cgpa7">CGPA</string>
    <string name="syllabus7">Syllabus</string>
    <string name="create_course_outline">Create Course Outline</string>
    <string name="read_outline">Read Outline</string>
    <string name="logout">Logout</string>
    <string name="calculate_your_cgpa5">Calculate Your CGPA</string>
    <string name="enter_cgpa_e_g_3_1_5_2_1">Enter CGPA (e.g. 3,1.5,2,1)</string>
    <string name="enter_credits_e_g_3_4_2_1">Enter credits (e.g. 3,4,2,1)</string>
    <string name="calculate_cgpa5">Calculate CGPA</string>
    <string name="search">Search</string>
    <string name="search2">Search</string>
    <string name="search3">Search</string>
    <string name="search6">Search</string>

</resources>
