<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#F8BBD0"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".UpdateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_pdf3"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Course ID EditText -->
    <EditText
        android:id="@+id/et_course_id"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/course_id5"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="Autofill,TextContrastCheck" />

    <!-- Course Name EditText -->
    <EditText
        android:id="@+id/et_course_name"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/course_name45"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextContrastCheck" />

    <!-- Spinner for Semester -->
    <Spinner
        android:id="@+id/spinner_semester"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/edit_text" />

    <!-- RadioGroup for Exam Type -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/mid5" />
        <RadioButton
            android:id="@+id/radio_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/final5" />
    </RadioGroup>

    <!-- RadioGroup for PDF Type -->
    <RadioGroup
        android:id="@+id/radioGroup_question_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <RadioButton
            android:id="@+id/radio_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/question5" />
        <RadioButton
            android:id="@+id/radio_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/note5" />
    </RadioGroup>

    <!-- Year EditText -->
    <EditText
        android:id="@+id/et_year_name"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/year5"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextContrastCheck" />

    <!-- ImageView for PDF Selection -->
    <ImageView
        android:id="@+id/pdf_in"
        android:layout_width="122dp"
        android:layout_height="105dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"
        android:contentDescription="@string/select_pdf5"
        android:padding="8dp"
        android:src="@drawable/select_pdf"
        tools:ignore="ImageContrastCheck" />

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        style="@android:style/Widget.ProgressBar.Small" />

    <!-- Update Button -->
    <Button
        android:id="@+id/btnUpdateFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_pdf5"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
