<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGuideTeacherActivity"
    android:background="#BBDEFB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guideline_for_students"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tech_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:text="@string/teacher_name4"
                android:background="@android:drawable/edit_text"
                android:padding="20dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/cou_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@android:drawable/edit_text"
                android:hint="@string/course_name4"
                android:inputType="text"
                android:padding="20dp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/cou_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@android:drawable/edit_text"
                android:hint="@string/course_id_n"
                android:inputType="text"
                android:padding="20dp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/batch_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:background="@android:drawable/edit_text"
                android:hint="@string/batch"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


            <TextView
                android:id="@+id/pdf_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:background="@android:drawable/edit_text"
                android:hint="@string/pdf_UP"

                android:padding="8dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/radio_mid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/mid"/>
                <RadioButton
                    android:id="@+id/radio_final"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/final4"/>


            </RadioGroup>


            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="gone" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>