<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".UpdateGuideActivity"
    android:background="#B2C5F2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_item"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <!-- ImageView to display a thumbnail for PDFs -->
        <!--        <ImageView-->
        <!--            android:id="@+id/pdfThumbnail"-->
        <!--            android:layout_width="150dp"-->
        <!--            android:layout_height="150dp"-->
        <!--            android:src="@drawable/pic"-->
        <!--            android:layout_marginBottom="20dp"/>-->


        <TextView
            android:id="@+id/pdf_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/pdf_UP"
            android:padding="8dp"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/cou_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:hint="@string/course_name8"
            android:inputType="text"
            android:padding="20dp"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/cou_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:hint="@string/course_id_n"
            android:inputType="text"
            android:padding="20dp"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/batch_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:hint="@string/batch"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#0277BD"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


        <TextView
            android:id="@+id/selectPdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/pdf_UP"

            android:padding="8dp"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />







        <!-- EditText for title -->

        <!-- Button to select PDF -->
        <!--        <Button-->
        <!--            android:id="@+id/selectPdfButton"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="45dp"-->
        <!--            android:text="@string/select_pdf_g"/>-->

        <!-- Update Button -->
        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_g"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <!-- ProgressBar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>